dev: update t4 tasks to be platform agnostic

--- a/src/Core/CsvReader.Generated.tt
+++ b/src/Core/CsvReader.Generated.tt
@@ -175,6 +175,7 @@ static partial class CsvReader
     /// <#= docOptions #>
     /// <#= docIOOpts #>
     /// <#= docReadReturns #>
+    [OverloadResolutionPriority(1000)] // prefer byte overload for files
     <#= attrs #>public static <#= enumerable #><byte, TValue> ReadFromFile<<#= typeAttrs #>TValue>(
         string path,<#= typeMapByte #>
         CsvOptions<byte>? options = null,
