refactor: remove memorypool from csvoptions
move to CsvIOOptions

--- a/src/Core/CsvParallel.Generated.tt
+++ b/src/Core/CsvParallel.Generated.tt
@@ -70,7 +70,7 @@ static partial class CsvParallel
 
         string ioOptsParam = streaming
             ? ", ioOptions"
-            : "";
+            : ", null";
             
         string encodingParam = fromFile && !utf8
             ? ", encoding"
