--- a/src/Core/CsvReader.Generated.tt
+++ b/src/Core/CsvReader.Generated.tt
@@ -106,7 +106,7 @@ static partial class CsvReader
     {
         ArgumentNullException.ThrowIfNull(reader);<#= validateTypeMap #>
         options ??= CsvOptions<char>.Default;
-        return new <#= enumerable #><char, TValue>(CsvBufferReader.Create(reader, options.Allocator, ioOptions), options<#= typeMapArg #>);
+        return new <#= enumerable #><char, TValue>(CsvBufferReader.Create(reader, in ioOptions), options<#= typeMapArg #>);
     }
 
     /// <summary>
@@ -125,7 +125,7 @@ static partial class CsvReader
     {
         Throw.IfNotReadable(stream);<#= validateTypeMap #>
         options ??= CsvOptions<char>.Default;
-        return new <#= enumerable #><char, TValue>(CsvBufferReader.Create(stream, encoding, options.Allocator, ioOptions), options<#= typeMapArg #>);
+        return new <#= enumerable #><char, TValue>(CsvBufferReader.Create(stream, encoding, in ioOptions), options<#= typeMapArg #>);
     }
 
     /// <summary>
@@ -143,7 +143,7 @@ static partial class CsvReader
     {
         Throw.IfNotReadable(stream);<#= validateTypeMap #>
         options ??= CsvOptions<byte>.Default;
-        return new <#= enumerable #><byte, TValue>(CsvBufferReader.Create(stream, options.Allocator, ioOptions), options<#= typeMapArg #>);
+        return new <#= enumerable #><byte, TValue>(CsvBufferReader.Create(stream, in ioOptions), options<#= typeMapArg #>);
     }
 
     /// <summary>
@@ -164,7 +164,7 @@ static partial class CsvReader
         options ??= CsvOptions<char>.Default;
         ioOptions = ioOptions.ForFileIO();
         return new <#= enumerable #><char, TValue>(
-            new ReaderFactory<char>(isAsync => GetFileBufferReader(path, encoding, isAsync, options.Allocator, ioOptions)),
+            new ReaderFactory<char>(isAsync => GetFileBufferReader(path, encoding, isAsync, in ioOptions)),
             options<#= typeMapArg #>);
     }
     
@@ -185,7 +185,7 @@ static partial class CsvReader
         options ??= CsvOptions<byte>.Default;
         ioOptions = ioOptions.ForFileIO();
         return new <#= enumerable #><byte, TValue>(
-            new ReaderFactory<byte>(isAsync => GetFileBufferReader(path, isAsync, options.Allocator, ioOptions)),
+            new ReaderFactory<byte>(isAsync => GetFileBufferReader(path, isAsync, in ioOptions)),
             options<#= typeMapArg #>);
     }
 
@@ -237,7 +237,7 @@ static partial class CsvReader
         options ??= CsvOptions<char>.Default;
         ioOptions = ioOptions.ForFileIO();
         return new CsvRecordEnumerable<char>(
-            new ReaderFactory<char>(isAsync => GetFileBufferReader(path, encoding, isAsync, options.Allocator, ioOptions)),
+            new ReaderFactory<char>(isAsync => GetFileBufferReader(path, encoding, isAsync, in ioOptions)),
             options);
     }
     
@@ -259,7 +259,7 @@ static partial class CsvReader
         options ??= CsvOptions<byte>.Default;
         ioOptions = ioOptions.ForFileIO();
         return new CsvRecordEnumerable<byte>(
-            new ReaderFactory<byte>(isAsync => GetFileBufferReader(path, isAsync, options.Allocator, ioOptions)),
+            new ReaderFactory<byte>(isAsync => GetFileBufferReader(path, isAsync, in ioOptions)),
             options);
     }
 
@@ -298,7 +298,7 @@ static partial class CsvReader
     {
         ArgumentNullException.ThrowIfNull(reader);
         return new CsvRecordEnumerable<char>(
-            CsvBufferReader.Create(reader, options?.Allocator, ioOptions),
+            CsvBufferReader.Create(reader, in ioOptions),
             options ?? CsvOptions<char>.Default);
     }
 
@@ -319,7 +319,7 @@ static partial class CsvReader
     {
         Throw.IfNotReadable(stream);
         return new CsvRecordEnumerable<char>(
-            CsvBufferReader.Create(stream, encoding, options?.Allocator, ioOptions),
+            CsvBufferReader.Create(stream, encoding, in ioOptions),
             options ?? CsvOptions<char>.Default);
     }
     
@@ -339,7 +339,7 @@ static partial class CsvReader
     {
         Throw.IfNotReadable(stream);
         return new CsvRecordEnumerable<byte>(
-            CsvBufferReader.Create(stream, options?.Allocator, ioOptions),
+            CsvBufferReader.Create(stream, in ioOptions),
             options ?? CsvOptions<byte>.Default);
     }
 
